--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ edition = "2021"
 # DON'T EDIT THIS!
 [dependencies]
 anyhow = "1.0.68"                                                  # error handling
+axum-macros = "0.4.0"
 bytes = "1.3.0"                                                    # helps wrap responses from reqwest
 clap = { version = "4.0.32", features = ["derive"]}                # creating a cli
 hex = "0.4.3"
