--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ axum-macros = "0.4.0"
 bytes = "1.3.0" # helps wrap responses from reqwest
 clap = { version = "4.0.32", features = ["derive"] } # creating a cli
 hex = "0.4.3"
+hex-literal = "0.4.1"
 regex = "1" # for regular expressions
 reqwest = { version = "0.11.18", features = [
     "json",
@@ -34,7 +35,7 @@ serde_bencode = "0.2.4" # for bencode encoding/decoding
 serde_bytes = "0.11.12" # for dealing with bytes
 serde_json = "1.0.105" # for json mangling
 serde_urlencoded = "0.7.1" # for url encoding
-sha1 = "0.10.1" # hashing
+sha1 = "0.10.1"
 tempfile = "3" # creating temporary directories
 thiserror = "1.0.38" # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async http requests
