--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ sha1 = "0.10.1"
 tempfile = "3" # creating temporary directories
 thiserror = "1.0.38" # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async http requests
+urlencoding = "2.1.3"
