tcp handshake - no unsafe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68" # error handling
 axum-macros = "0.4.0"
+bincode = "1.3.3"
 bytes = "1.3.0" # helps wrap responses from reqwest
 clap = { version = "4.0.32", features = ["derive"] } # creating a cli
 hex = "0.4.3"
