--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,12 @@ axum-macros = "0.4.0"
 bincode = "1.3.3"
 bytes = "1.3.0" # helps wrap responses from reqwest
 clap = { version = "4.0.32", features = ["derive"] } # creating a cli
+futures-core = "0.3.29"
+futures-sink = "0.3.29"
+futures-util = { version = "0.3.29", features = ["sink"] }
 hex = "0.4.3"
 hex-literal = "0.4.1"
+rand = "0.8.5"
 regex = "1" # for regular expressions
 reqwest = { version = "0.11.18", features = [
     "json",
@@ -40,4 +44,5 @@ sha1 = "0.10.1"
 tempfile = "3" # creating temporary directories
 thiserror = "1.0.38" # error handling
 tokio = { version = "1.23.0", features = ["full"] } # async http requests
+tokio-util = "0.7.10"
 urlencoding = "2.1.3"
